# docopt-ng

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  docopt.py  docopt.pyi  pyproject.toml  setup.cfg  setup.py  test_docopt.py  test_docopt_ng.py  tox.ini
.github/workflows/: test.yml
docopt/: __init__.py
examples/: arguments_example.py  calculator_example.py  config_file_example.py  counted_example.py  interactive_example.py  more_magic_example.py  naval_fate.py  odd_even_example.py  options_example.py  options_shortcut_example.py  quick_example.py  validation_example.py
examples/git/: git.py  git_add.py  git_branch.py  git_checkout.py  git_clone.py  git_commit.py  git_push.py  git_remote.py
scripts/: linter
tests/: conftest.py  requirements.txt  test_docopt.py  test_docopt_ng.py  testcases.docopt
