[metadata]
name = docopt-ng
version = attr: docopt.__version__
url = https://github.com/jazzband/docopt-ng
license = MIT
author = Nick Crews
author_email = nicholas.b.crews@gmail.com
description = Jazzband-maintained fork of docopt, the humane command line arguments parser.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
packages = find:

[options.package_data]
# If any package or subpackage contains py.typed, include it
* = py.typed


[options.extras_require]
dev =
    black
    build
    ruff,
    mypy
    pre-commit
    pytest
    pytest-mypy
    pytest-cov
    twine

[bdist_wheel]
universal = 1
